kubernetes/gateway-api/haproxy/01-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  namespace: default
  name: haproxy
spec:
  controllerName: haproxy.org/gateway-controller
