kubernetes/gateway-api/haproxy/03-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: go-route
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-api
      namespace: default
  rules:
    - backendRefs:
      - group: ''
        kind: Service
        name: go-svc
        port: 5000
        weight: 10
